tests/checker/fail/literal_dispatch_missing_catchall.can
route = (String) => String {
    String -> (
        * "/a" => String { "a" }
        * "/b" => String { "b" }
    )
}

main = () => Unit {
    "/a".route().print()
}
